@@ -48,10 +48,6 @@ codenarcTest {
     configFile = file('config/codenarc/rules-test.groovy')
 }
 
-test {
-    jvmArgs += ['-XX:MaxPermSize=256m']
-}
-
 group = 'argelbargel.gradle.plugins'
 archivesBaseName = 'gradle-jpi-plugin'
 description = 'Gradle plugin for building and packaging Jenkins plugins'
